fix ribbon text alignment on save

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,6 @@ svg .future { display: none; }
 
 .export-class {
   &.ribbonTxt {
-    margin-top: -1px;
+    margin-top: -1px !important;
   }
 }
